style: fix Tooltip arrow border on dark mode

--- a/.storybook/index.less
+++ b/.storybook/index.less
@@ -11,6 +11,10 @@ body,
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--color-bg-1);
+}
+
 @dark: #00a0e9;
 @light: rgba(0, 160, 233, 0.7);
 .story-grid-wrapper {
